[gd_scene load_steps=8 format=2]

[ext_resource path="res://gfx/hud/bannerHanging.png" type="Texture" id=1]
[ext_resource path="res://gfx/hud/lifes.png" type="Texture" id=2]
[ext_resource path="res://gfx/hud/coin_bronze.png" type="Texture" id=3]
[ext_resource path="res://fonts/candles.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://gui/GUI.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 4
outline_color = Color( 0.529412, 0.34902, 0.164706, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[node name="GUI" type="CanvasLayer" groups=["GUI"]]
script = ExtResource( 5 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -284.0
margin_top = 16.0
margin_bottom = 59.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Control/TextureRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_right = -30.0
margin_bottom = -12.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CoinIcon" type="TextureRect" parent="Control/TextureRect/HBoxContainer"]
margin_right = 60.0
margin_bottom = 71.0
texture = ExtResource( 3 )

[node name="CoinCount" type="Label" parent="Control/TextureRect/HBoxContainer"]
margin_left = 64.0
margin_top = 4.0
margin_right = 122.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.913725, 0.623529, 0.392157, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="LifeIcon" type="TextureRect" parent="Control/TextureRect/HBoxContainer"]
margin_left = 126.0
margin_right = 178.0
margin_bottom = 71.0
texture = ExtResource( 2 )

[node name="LifeCount" type="Label" parent="Control/TextureRect/HBoxContainer"]
margin_left = 182.0
margin_top = 4.0
margin_right = 240.0
margin_bottom = 66.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.788235, 0.54902, 0.309804, 1 )
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1

[node name="TimerText" type="Label" parent="Control"]
margin_left = 16.0
margin_top = 16.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 2 )
text = "00:00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
